brightened pink borders for visibility, fixed w3c validation errors

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@ COLORS
 #f4c803 -- yellow
 #cc3399 -- purple
 #df2879 -- pink
-#270514 -- dark pink (outlines)
+#4b0a27 -- dark pink (outlines)
 
 ***************************************
 RESET
@@ -228,7 +228,7 @@ nav {
 	margin: 0 auto;
 	background-color: #101010;
 	font-size: 150%;
-	border-bottom: 2px solid #270514;
+	border-bottom: 2px solid #4b0a27;
 	grid-area: nav;
 	position: sticky;
 	position: -webkit-sticky;
@@ -255,7 +255,7 @@ nav {
 		outline: none;
 	}
 
-.dropBtn {
+.drop-btn {
 	border: none;
 	background-color: rgb(0,0,0,0.0);
 	color: #25ced1;
@@ -270,7 +270,7 @@ nav {
 	position: absolute;
 	top: 54px;
 	z-index: 2;
-	border: 2px solid #270514;
+	border: 2px solid #4b0a27;
 	border-top: none;
 }
 
@@ -379,7 +379,7 @@ h2 {
 }
 
 .pic, .bio p, .other, .contact, .pg-container {
-	border: 2px solid #270514;
+	border: 2px solid #4b0a27;
 	border-radius: 20px;
 	background-color: #101010;
 }
